<resources>
    <string name="app_name">RuPasswords</string>
    <string name="mainActivityTitle_string">Русские пароли</string>
    <string name="appDescription_string">Здесь вы можете посмотреть свой пароль, созданный по методу "Русское слово в английской расскладке""</string>
    <string name="editTextHint_string">Введите пароль на русском</string>
    <string name="generate_new_password_textView">Сгенерируйте новый пароль ему на замену</string>
    <string name="caps_checkBox">Заглавные</string>
    <string name="digits_checkBox">Цифры</string>
    <string name="special_checkBox">Спецсимволы</string>
    <string name="generated_button_string">Сгенерировать</string>

    <string-array name="russians">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
        <item>Й</item>
        <item>Ц</item>
        <item>У</item>
        <item>К</item>
        <item>Е</item>
        <item>Н</item>
        <item>Г</item>
        <item>Ш</item>
        <item>Щ</item>
        <item>З</item>
        <item>Х</item>
        <item>Ъ</item>
        <item>Ф</item>
        <item>Ы</item>
        <item>В</item>
        <item>А</item>
        <item>П</item>
        <item>Р</item>
        <item>О</item>
        <item>Л</item>
        <item>Д</item>
        <item>Ж</item>
        <item>Э</item>
        <item>Я</item>
        <item>Ч</item>
        <item>С</item>
        <item>М</item>
        <item>И</item>
        <item>Т</item>
        <item>Ь</item>
        <item>Б</item>
        <item>Ю</item>
    </string-array>

    <string-array name="latin">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
        <item>Q</item>
        <item>W</item>
        <item>E</item>
        <item>R</item>
        <item>T</item>
        <item>Y</item>
        <item>U</item>
        <item>I</item>
        <item>O</item>
        <item>P</item>
        <item>[</item>
        <item>]</item>
        <item>A</item>
        <item>S</item>
        <item>D</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>:</item>
        <item>\"</item>
        <item>Z</item>
        <item>X</item>
        <item>C</item>
        <item>V</item>
        <item>B</item>
        <item>N</item>
        <item>M</item>
        <item>,</item>
        <item>.</item>
    </string-array>

    <plurals name="symbols_count">
        <item quantity="one">символ</item>
        <item quantity="two">символа</item>
        <item quantity="few">символа</item>
        <item quantity="many">символов</item>
        <item quantity="other">символов</item>
    </plurals>

    <string name="clipboard_title">Пароль</string>
    <string name="toast_copied">Текст скопирован.</string>
</resources>
